Nouvelles routes Get pour les abonnements et abonnés d'un utilisateur donné
