# src/entities/User.ts
@@ -1,13 +1,28 @@
-import {Table, Column, Model, PrimaryKey, Length, NotNull, HasOne, Default} from 'sequelize-typescript';
+import {
+    Table,
+    Column,
+    Model,
+    PrimaryKey,
+    Length,
+    NotNull,
+    HasOne,
+    Default,
+    BelongsToMany,
+    Scopes, HasMany
+} from 'sequelize-typescript';
 import {BuildOptions, DataTypes} from 'sequelize';
 import {v4String} from 'uuid/interfaces';
 import {Theme} from './Theme';
+import {Subscription} from './Subscription';
 
 export interface IUser {
     id: v4String;
-    description?: string;
-    birthday?: Date;
-    theme?: Theme;
+    description: string;
+    birthday: Date;
+    Theme: Theme;
+    picture: string;
+    followers: Subscription[];
+    follows: Subscription[];
 }
 
 @Table
@@ -19,13 +34,22 @@ export class User extends Model<User> implements IUser {
     public id!: v4String;
 
     @Length({max: 144})
-    @Column
-    public description?: string;
+    @Column(DataTypes.STRING)
+    public description!: string;
 
-    @Column
-    public birthday?: Date;
+    @Column(DataTypes.DATE)
+    public birthday!: Date;
 
     @HasOne(() => Theme)
-    public theme?: Theme;
+    public Theme!: Theme;
+
+    @Column(DataTypes.STRING)
+    public picture!: string;
+
+    @HasMany(() => Subscription, 'followerId')
+    public followers!: Subscription[];
+
+    @HasMany(() => Subscription, 'followedId')
+    public follows!: Subscription[];
 
 }
